[FIX] Fixed invisible thumb for SVG file in preview from 'FileInputButtonBase' widget, close #9

--- a/sass/scss/tools/_include-fileinputbutton.scss
+++ b/sass/scss/tools/_include-fileinputbutton.scss
@@ -1,4 +1,5 @@
 @import '../tools/flexbox';
+@import '../tools/rem';
 
 //
 // Mixin for base simple fileinputbutton layout
@@ -131,6 +132,10 @@
                 img {
                     display: inline-block $important-mark;
                     margin: 0 auto $important-mark;
+
+                    &[src$=".svg"] {
+                        width: rem-calc(60px);
+                    }
                 }
             }
         }
